[gd_scene load_steps=13 format=3 uid="uid://cys716xogpgmb"]

[ext_resource type="Script" uid="uid://dqgm1848rfacx" path="res://Scripts/Enemy/Enemy.gd" id="1_1f0kj"]
[ext_resource type="Texture2D" uid="uid://ysg2ij2ioxim" path="res://Sprites/Axolotl-Lucy.png" id="2_287tu"]
[ext_resource type="AudioStream" uid="uid://pjc70q36n6x0" path="res://SFX/sfx_npc_enemyhit.ogg" id="3_afpow"]
[ext_resource type="AudioStream" uid="uid://bceiiho21q2ln" path="res://SFX/sfx_npc_enemyexplode_2.ogg" id="4_287tu"]

[sub_resource type="CircleShape2D" id="CircleShape2D_u6qdh"]
radius = 32.01562

[sub_resource type="Animation" id="Animation_ipdlf"]
resource_name = "Damage"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(10, 10, 10, 1), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_qgdn1"]
resource_name = "Death"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(10, 10, 10, 0)]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.3),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"remove"
}]
}

[sub_resource type="Animation" id="Animation_5whgx"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_8u0c1"]
_data = {
&"Damage": SubResource("Animation_ipdlf"),
&"Death": SubResource("Animation_qgdn1"),
&"RESET": SubResource("Animation_5whgx")
}

[sub_resource type="Animation" id="Animation_dmwl5"]
resource_name = "Idle"
length = 0.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.16666667, 0.3, 0.45),
"transitions": PackedFloat32Array(0.933033, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}

[sub_resource type="Animation" id="Animation_d40jh"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_d40jh"]
_data = {
&"Idle": SubResource("Animation_dmwl5"),
&"RESET": SubResource("Animation_d40jh")
}

[node name="Enemy" type="CharacterBody2D" groups=["Enemy"]]
collision_layer = 2
collision_mask = 72
script = ExtResource("1_1f0kj")
MaxHealth = 5.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_u6qdh")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(0.275, 0.275)
texture = ExtResource("2_287tu")
hframes = 4

[node name="DamageAnimation" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_8u0c1")
}

[node name="HitSFX" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_afpow")
volume_db = 5.504
max_distance = 100000.0
bus = &"SFX"

[node name="DeathSFX" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_287tu")
volume_db = 5.268
max_distance = 100000.0
bus = &"SFX"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_d40jh")
}
autoplay = "Idle"
